--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE=mongodb+srv://kumarmongo8865:%40mongo8865@cluster0.we1bjmz.mongodb.net/QuizAppDB
 # DATABASE=mongodb+srv://Sudhir777:Sudhir77748@cluster0.or6io0r.mongodb.net/quiz
-
+PORT=3755
 
 
